# django-brevo-analytics

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  RELEASE.md  RELEASE_NOTES.md  SECURITY_FIX_v0.2.1.md  apply_i18n.py  emails_import.csv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
brevo_analytics/: __init__.py  admin.py  exceptions.py  models.py  supabase.py  views.py  webhooks.py
brevo_analytics/locale/it/LC_MESSAGES/: django.mo
brevo_analytics/management/commands/: import_brevo_logs.py
brevo_analytics/management/commands/archive/: README.md
brevo_analytics/templatetags/: brevo_filters.py
docs/: BLACKLIST_UI_GUIDE.md  BOUNCE_AND_BLACKLIST_MANAGEMENT.md  INSTALLATION.md  README.md  csv-import-guide.md  n8n-workflow-design.md
docs/archive/: 2026-01-20-brevo-analytics-design.md  2026-01-21-django-native-refactoring.md  README.md  SUPABASE_SETUP.md  csv-import-guide.md
docs/archive/sql/: 04_generate_jwt.py  05_insert_sample_emails.sql  09_add_deferred_event_type.sql  10_create_emails_with_status_view.sql  README.md  note  test_brevo_api.py  test_jan5_bounce.py
docs/plans/: 2026-01-20-brevo-analytics-implementation.md  2026-01-21-csv-data-cleanup-plan.md  2026-01-21-spa-implementation-plan.md
sql/: 00_create_schema.sql  01_create_tables.sql  02_enable_rls.sql  03_create_test_data.sql  04_generate_jwt.py  05_insert_sample_emails.sql  06_create_sync_state_table.sql  07_import_from_csv.sql  README.md  enrich_bounce_reasons.py  note  transform_csv_to_supabase.py
(+5 files in other folders)
